cedar-language-server/src/documentation/snapshots/cedar_language_server__documentation__action__test__action_documentation_error_constraint_with_schema.snap
---
source: cedar-language-server/src/documentation/action.rs
expression: action_doc.to_documentation_string(Some(&schema))
---
# Action

The action element in a Cedar policy is the action that can be performed on the resource
defined by the resource element.

The action element must be present. If you specify only action without an expression
that constrains its scope, then the policy applies to any action.

**Error**

Invalid action constraint
